# PyQvd

./: .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  noxfile.py  pyproject.toml  requirements.txt  setup.py
docs/: requirements.txt
docs/source/: api.rst  conf.py  getting-started.rst  index.rst  user-guide.rst
docs/source/api/: core.rst  io.rst
docs/source/guide/: introduction.rst  qvd-file-format.rst
pyqvd/: __init__.py  qvd.py  reader.py  writer.py
pyqvd/io/: __init__.py  format.py  reader.py  writer.py
tests/: conftest.py  parser_test.py  qvd_test.py  reader_test.py  writer_test.py
tests/benchmark/: reader_test.py  writer_test.py
tests/data/: damaged.qvd  giant.qvd  large.qvd  medium.qvd  small.qvd
tests/io/: format_test.py  reader_benchmark_test.py  reader_test.py  writer_test.py
tests/profiling/: reader_test.py  writer_test.py
tests/unit/: qvd_test.py
tests/unit/io/: reader_test.py  writer_test.py
