[build-system]
requires = ["setuptools<68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyQvd"
version = "2.2.2"
description = "Utility library for reading/writing Qlik View Data (QVD) files in Python."
readme = {file = "README.md", content-type = "text/markdown"}
license = { file = "LICENSE.md" }
authors = [
    {name = "Constantin Müller", email = "info@mueller-constantin.de"},
]
keywords = ["qlik", "qvd", "qlik sense", "qlik view", "pandas"]
requires-python = ">=3.8"
dependencies = [
    "tabulate"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8"
]

[project.urls]
Homepage = "https://github.com/MuellerConstantin/PyQvd"
Repository = "https://github.com/MuellerConstantin/PyQvd.git"
Issues = "https://github.com/MuellerConstantin/PyQvd/issues"
Documentation = "https://pyqvd.readthedocs.io"
Changelog = "https://github.com/MuellerConstantin/PyQvd/CHANGELOG.md"

[project.optional-dependencies]
pandas = ["pandas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not benchmark'"
markers = [
    "benchmark: performance benchmarks (not run by default)"
]

[tool.pylint.main]
py-version = "3.8"

[tool.pylint.messages_control]
max-line-length = 120

[tool.pylint.report]
output-format = "colorized"
