[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyqvd"
version = "2.3.2"
description = "Utility library for reading/writing Qlik View Data (QVD) files in Python."
readme = "README.md"
license = "MIT"
authors = ["Constantin Müller <info@mueller-constantin.de>"]
keywords = ["qlik", "qvd", "qlik sense", "qlik view", "pandas"]

homepage = "https://github.com/MuellerConstantin/PyQvd"
repository = "https://github.com/MuellerConstantin/PyQvd"
documentation = "https://pyqvd.readthedocs.io"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9"
]

[tool.poetry.dependencies]
python = ">=3.9"
tabulate = "^0.9"
pandas = { version = "^2.2", optional = true }

[tool.poetry.extras]
pandas = ["pandas"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"
pytest-benchmark = "^5.2"
pylint = "^3.1"
nox = "^2025.11.12"
pyinstrument = "^5.1.2"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not benchmark and not profiling'"
markers = [
    "benchmark: performance benchmarks (not run by default)",
    "profiling: performance profiling (not run by default)"
]

[tool.pylint.main]
py-version = "3.9"

[tool.pylint.messages_control]
max-line-length = 120

[tool.pylint.report]
output-format = "colorized"
